--- a/cidh/cities/templates/base.html
+++ b/cidh/cities/templates/base.html
@@ -11,11 +11,14 @@
 
     <title>Sticky Footer Template for Bootstrap</title>
 
+    <!-- My CSS -->
+    <link href="/static/css/my.css" rel="stylesheet">
+
     <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="static/css/sticky-footer.css" rel="stylesheet">
+    <link href="/static/css/sticky-footer.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -32,13 +35,10 @@
 
     <!-- Begin page content -->
     <div class="container">
-      <div class="page-header">
-        <h1>Can I Drink Here?</h1>
-      </div>
-
+        <div class="jumbotron"><h1 style="text-align:center;">{% block top %} {% endblock %}</h2></div>
         {% block content %} {% endblock %}
 
-      </div>
+    </div>
 
 
 
@@ -51,6 +51,6 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
