Added cta urls to db

--- a/cidh/cities/templates/base.html
+++ b/cidh/cities/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     {# <link rel="icon" href="../../favicon.ico"> #}
 
-    <title>Sticky Footer Template for Bootstrap</title>
+    <title>Can I Drink here?</title>
 
     <!-- My CSS -->
     <link href="/static/css/my.css" rel="stylesheet">
@@ -45,12 +45,28 @@
 
     <div class="footer">
       <div class="container">
-        <p class="text-muted">Seattle Legal Hackathon Weekend</p>
+          <a href = "https://www.facebook.com/Legaldrink?ref=tn_tnmn">
+            <img src="/static/icons/facebook.png" alt="">
+          <a href = "https://twitter.com/legaldrink">
+            <img src="/static/icons/twitter.png" alt="">
+        </a>
       </div>
     </div>
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55659405-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
