--- a/cidh/cities/templates/base.html
+++ b/cidh/cities/templates/base.html
@@ -46,9 +46,9 @@
     <div class="footer">
       <div class="container">
           <a href = "https://www.facebook.com/Legaldrink?ref=tn_tnmn">
-            <img src="/static/icons/facebook.png" alt="">
+            <img src="/static/icons/facebook.png" alt="" style="margin-top:7px;">
           <a href = "https://twitter.com/legaldrink">
-            <img src="/static/icons/twitter.png" alt="">
+            <img src="/static/icons/twitter.png" alt="" style="margin-top:7px;">
         </a>
       </div>
     </div>
@@ -58,6 +58,7 @@
     <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
 
 <script>
+
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
