--- a/cidh/cities/templates/city.html
+++ b/cidh/cities/templates/city.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 
-<div class="col-md-4"></div>
-<div class="col-md-4">
+
+<div class="col-md-6">
 {% if city.drink_legal %}
 
 <a href='/city_detail/{{city.id}}'>
@@ -21,7 +21,32 @@
 
 </div>
 
-<div class="col-md-4">
+<div class="col-md-6">
+
+<ul>
+
+<li>
+<a href="{{ city.cta1_url }}" class="btn btn-default btn-lg" role="button" style="margin-bottom:20px">
+    <span class="glyphicon glyphicon-glass"></span>
+{{ city.cta1_title }}</a>
+</li>
+
+
+<li>
+<a href="{{ city.cta2_url }}" class="btn btn-default btn-lg" role="button" style="margin-bottom:20px">
+    <span class="glyphicon glyphicon-road"></span>
+{{ city.cta2_title }}</a>
+</li>
+
+
+<li>
+<a href="{{ city.cta3_url }}" class="btn btn-default btn-lg" role="button" style="margin-bottom:20px">
+    <span class="glyphicon glyphicon-hand-right"></span>
+{{ city.cta3_title }}</a>
+</li>
+
+</ul>
+
 </div>
 
 
