--- a/cidh/cities/templates/base.html
+++ b/cidh/cities/templates/base.html
@@ -54,6 +54,12 @@
     </div>
 
 
+<!-- Start of SimpleHitCounter Code -->
+<div align="center"><a href="http://www.simplehitcounter.com" target="_blank">
+<img src="http://simplehitcounter.com/hit.php?uid=1797377&f=16777215&b=0" border="0" height="18" width="83" alt="web counter"></a><br>
+</div>
+<!-- End of SimpleHitCounter Code -->
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
 
@@ -68,6 +74,9 @@
   ga('send', 'pageview');
 
 </script>
+
+
+
 
   </body>
 </html>
