--- a/cidh/cities/templates/city.html
+++ b/cidh/cities/templates/city.html
@@ -11,6 +11,7 @@
 <a href='/city_detail/{{city.id}}'>
   <img src="/static/photos/Checkmark.gif" height="200" width="200">
 </a>
+<p style="margin-left:50px;">(click for details)</p>
 
 
 {% else %}
