--- a/cidh/cities/templates/index.html
+++ b/cidh/cities/templates/index.html
@@ -6,9 +6,13 @@
 
 {% block content %}
 
-<ul>
-{% for city in cities %}
-<li><p class="lead"><a href="city/{{city.id}}">{{ city.city }}, {{ city.country }}</a></p></li>
+
+<table class="table table-hover">
+  {% for city in cities %}
+<tr>
+    <td align='left'><h4><a href="city/{{city.id}}">{{ city.city }}, {{ city.country }}</a></h4></td>
+</tr>
 {% endfor %}
-</ul>
+</table>
+
 {% endblock %}
