--- a/cidh/cities/templates/base.html
+++ b/cidh/cities/templates/base.html
@@ -24,6 +24,10 @@
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     {# // <script src="static/js/ie-emulation-modes-warning.js"></script> #}
 
+    <!-- extra js for clicking -->
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="/static/js/divClick.js"></script>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -74,7 +78,6 @@
   ga('send', 'pageview');
 
 </script>
-
 
 
 
