--- a/cidh/cities/templates/base.html
+++ b/cidh/cities/templates/base.html
@@ -28,6 +28,9 @@
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="/static/js/divClick.js"></script>
 
+    <!-- geolocation js -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -78,7 +81,6 @@
   ga('send', 'pageview');
 
 </script>
-
 
 
   </body>
