--- a/cidh/cities/templates/index.html
+++ b/cidh/cities/templates/index.html
@@ -19,26 +19,26 @@
 
 
 <script>
-  if(google.loader.ClientLocation)
-{
-    visitor_lat = google.loader.ClientLocation.latitude;
-    visitor_lon = google.loader.ClientLocation.longitude;
-    visitor_city = google.loader.ClientLocation.address.city;
-    visitor_region = google.loader.ClientLocation.address.region;
-    visitor_country = google.loader.ClientLocation.address.country;
-    visitor_countrycode = google.loader.ClientLocation.address.country_code;
+//   if(google.loader.ClientLocation)
+// {
+//     visitor_lat = google.loader.ClientLocation.latitude;
+//     visitor_lon = google.loader.ClientLocation.longitude;
+//     visitor_city = google.loader.ClientLocation.address.city;
+//     visitor_region = google.loader.ClientLocation.address.region;
+//     visitor_country = google.loader.ClientLocation.address.country;
+//     visitor_countrycode = google.loader.ClientLocation.address.country_code;
 
-}
+// }
 
-else
-{
-    // ClientLocation not found or not populated
-    // so perform error handling
-}
+// else
+// {
+//     // ClientLocation not found or not populated
+//     // so perform error handling
+// }
 
-if (visitor_city == 'Seattle'){
-  window.location.href='city/8/';
-}
+// if (visitor_city == 'Seattle'){
+//   window.location.href='city/8/';
+// }
 
 </script>
 
