Enabled geolocation + fixed url views

--- a/cidh/cities/templates/city_detail.html
+++ b/cidh/cities/templates/city_detail.html
@@ -40,6 +40,10 @@
 
 
 <li>
+<p style="font-size:18px;"><b style="font-size:22px;">Drinking Age: </b>{{ city.age }}</p>
+</li>
+
+<li>
 <p style="font-size:18px;"><b style="font-size:22px;">Beer: </b>{{ city.beer }}</p>
 </li>
 
@@ -50,10 +54,6 @@
 
 <li>
 <p style="font-size:18px;"><b style="font-size:22px;">Liquor: </b>{{ city.liquor }}</p>
-</li>
-
-<li>
-<p style="font-size:18px;"><b style="font-size:22px;">Age: </b>{{ city.age }}</p>
 </li>
 
 
