--- a/cidh/cities/templates/list.html
+++ b/cidh/cities/templates/list.html
@@ -10,7 +10,7 @@
 <table class="table table-hover">
   {% for city in cities %}
 <tr>
-    <td align='left'><h4><a href="city/{{city.id}}">{{ city.city }}, {{ city.country }}</a></h4></td>
+    <td align='left'><h4><a href="{% url "city_view" city.id %}">{{ city.city }}, {{ city.country }}</a></h4></td>
 </tr>
 {% endfor %}
 </table>
